@@ -11,8 +11,10 @@ CHANGES
   not start.
 - Fixed XLS import crashes:
 
-  + When username is a number (https://launchpad.net/bugs/801870)
-  + When no file was selected for import
+  + Username is a number (https://launchpad.net/bugs/801870)
+  + No file selected for import
+  + Section timetables without resources
+  + Empty sections or groups (https://launchpad.net/bugs/382566)
 
 
 1.6.0 (2011-04-25)
